--- a/lottie/build.gradle
+++ b/lottie/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
   implementation "androidx.appcompat:appcompat:${androidXVersion}"
+  implementation 'com.jakewharton.timber:timber:4.7.1'
   testImplementation "org.mockito:mockito-core:2.15.0"
   testImplementation 'junit:junit:4.12'
   testImplementation "org.robolectric:robolectric:4.0-alpha-3"
